--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "django-request-logging (>=0.7.5,<0.8.0)",
     "django-ratelimit (>=4.1.0,<5.0.0)",
     "celery (>=5.4.0,<6.0.0)",
+    "drf-spectacular (>=0.28.0,<0.29.0)",
 ]
 
 
